# multilingual

./: .gitignore  .pylintrc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  USAGE.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  tmp_complete_features.wat
docs/: BACKEND_TESTING_QUICK_START.md  BACKEND_TESTING_STRATEGY.md  CHANGELOG.md  README.md  UPGRADE_TO_WASM.md  WASM_ABI_MANIFEST.md  WASM_ARCHITECTURE_OVERVIEW.md  WASM_DEVELOPMENT.md  WASM_FAQ.md  WASM_INSTALLATION.md  WASM_PERFORMANCE_TUNING.md  WASM_TROUBLESHOOTING.md  cnl_scope.md  compatibility_matrix.md  compatibility_roadmap.md  core_spec.md  demos.md  design.md  development.md  evaluation_plan.md  frontend_contracts.md  language_onboarding.md  playground.html  playground.md  programmation_fr.md  python312_feature_checklist.md  reference.md  related_work.md  releasing.md  stdlib_localization.md  translation_guidelines.md  vision.md  wat_oop_model.md  word_order_and_naturalness.md
examples/: README.md  agent_en.ml  agent_en.multi  agent_fr.ml  agent_fr.multi  agent_ja.ml  agent_ja.multi  arithmetic.py  arithmetics_en.ml  arithmetics_fr.ml  ast_example.py  cli_tool_en.ml  cli_tool_fr.ml  codegen_example.py  complete_features_ar.ml  complete_features_bn.ml  complete_features_da.ml  complete_features_de.ml  complete_features_en.ml  complete_features_en.multi  complete_features_es.ml  complete_features_fi.ml  complete_features_fr.ml  complete_features_hi.ml  complete_features_hi.multi  complete_features_it.ml  complete_features_ja.ml  complete_features_ja.multi  complete_features_nl.ml  complete_features_nl.multi  complete_features_pl.ml  complete_features_pl.multi  complete_features_pt.ml  complete_features_pt.multi  complete_features_sv.ml  complete_features_ta.ml  complete_features_zh.ml  complete_features_zh.multi  cross_import_main_en.multi  cross_import_main_en_legacy.multi  (+27 more)
multilingualprogramming/: __init__.py  __main__.py  abstract_numeral.py  exceptions.py  imports.py  mp_numeral.py  roman_numeral.py  source_extensions.py  unicode_numeral.py  unicode_string.py  version.py
resources/: README.md
tests/: _test_helpers.py  advanced_language_features_test.py  ast_nodes_test.py  ast_normalization_test.py  ast_printer_test.py  backend_parity_test.py  build_orchestrator_test.py  builtin_function_parity_test.py  bytes_raw_string_test.py  complete_features_wasm_execution_test.py  complete_features_wat_test.py  complex_numeral_test.py  conftest.py  core1_semantic_test.py  core_ir_test.py  critical_features_test.py  ecosystem_compatibility_test.py  encoding_guard_test.py  error_messages_test.py  executor_test.py  fractal_regression_test.py  fraction_numeral_test.py  frontend_equivalence_test.py  full_language_pipeline_test.py  generated_output_encoding_test.py  import_parity_test.py  import_stdlib_expansion_test.py  keyword_registry_test.py  language_completeness_cli_test.py  lexer_test.py  localized_builtins_test.py  manifest_renderer_contract_test.py  mp_datetime_test.py  mp_numeral_test.py  multilingual_advanced_features_test.py  multilingual_imports_test.py  operators_cli_test.py  (+36 more)
(+222 files in other folders)
