[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multilingualprogramming"
dynamic = ["version"]
description = "Python application for multilingual programming"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.12"
keywords = [
    "programming-language",
    "multilingual",
    "compiler",
    "transpiler",
    "education",
]
authors = [
    {name = "John Samuel", email = "johnsamuelwrites@example.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "roman>=3.3",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pylint",
]

[project.scripts]
multilingual = "multilingualprogramming.__main__:main"
multilg = "multilingualprogramming.__main__:main"

[project.urls]
Homepage = "https://github.com/johnsamuelwrites/multilingual"
Documentation = "https://johnsamuelwrites.github.io/multilingual/"
Repository = "https://github.com/johnsamuelwrites/multilingual"
Issues = "https://github.com/johnsamuelwrites/multilingual/issues"
Changelog = "https://github.com/johnsamuelwrites/multilingual/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["multilingualprogramming*"]

[tool.setuptools.dynamic]
version = {attr = "multilingualprogramming.version.__version__"}

[tool.setuptools.package-data]
multilingualprogramming = [
    "resources/*/*.json",
    "resources/*/*/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
